acceptably fast one

--- a/fixed_point_dnn/mc12101brd-nmpu1.cfg
+++ b/fixed_point_dnn/mc12101brd-nmpu1.cfg
@@ -27,6 +27,7 @@ SECTIONS
 {
     .text          : in shared0;
     .text_int      : in code;
+    .text_int_X      : in code;
     .text_nmplm      : in code;
 	.init          : in shared0;
 	.fini          : in shared0;
