--- a/fixed_point_dnn/mc12101brd-nmpu1.cfg
+++ b/fixed_point_dnn/mc12101brd-nmpu1.cfg
@@ -35,7 +35,7 @@ SECTIONS
 	.heap          : in seg_imu0;
     .heap1         : in seg_imu1;
     .heap2         : in seg_imu2;
-    .heap3         : in shared1;
+    .heap3         : in seg_imu3;
 	
 	.data          : in data;
 	.bss           : in data;
@@ -44,7 +44,7 @@ SECTIONS
 	.data_imu0     : in seg_imu0;
 	.data_imu1     : in seg_imu1;
 	.data_imu2     : in seg_imu2;
-	.data_imu3     : in shared1;
+	.data_imu3     : in seg_imu3;
 	
 	.data_imu0.bss : in seg_imu0;
 	.data_imu1.bss : in seg_imu1;
