--- a/fixed_point_dnn/mc12101brd-nmpu1.cfg
+++ b/fixed_point_dnn/mc12101brd-nmpu1.cfg
@@ -1,11 +1,20 @@
 MEMORY
 {
 //  Cx_IMU:  at 0x00008000, len = 0x00038000;	// NMC0 (128*7)kB
-	C0_IMU0: at 0x00000200, len = 0x00007e00;	// NMC0 128kB reserved for boot-loader
-	C0_IMU1: at 0x00008000, len = 0x00008000;	// NMC0 128kB
-	C0_IMU2: at 0x00010000, len = 0x00008000;	// NMC0 128kB
-	C0_IMU3: at 0x00018000, len = 0x00008000;	// NMC0 128kB
-	
+    C0_IMU0: at 0x00000200, len = 0x00007e00;   // NMC1 128kB reserved for boot-loader
+    C0_IMU1: at 0x00008000, len = 0x00008000;   // NMC1 128kB
+    C0_IMU2: at 0x00010000, len = 0x00008000;   // NMC1 128kB
+    C0_IMU3: at 0x00018000, len = 0x00008000;   // NMC1 128kB
+    
+    C0_IMX0: at 0x00040000, len = 0x00008000;   // NMC0 128kB
+    C0_IMX1: at 0x00048000, len = 0x00008000;   // NMC0 128kB
+    C0_IMX2: at 0x00050000, len = 0x00008000;   // NMC0 128kB
+    C0_IMX3: at 0x00058000, len = 0x00008000;   // NMC0 128kB
+    C0_IMX4: at 0x00060000, len = 0x00008000;   // NMC0 128kB
+    C0_IMX5: at 0x00068000, len = 0x00008000;   // NMC0 128kB
+    C0_IMX6: at 0x00070000, len = 0x00008000;   // NMC0 128kB
+    C0_IMX7: at 0x00078000, len = 0x00008000;   // NMC0 128kB
+    
 	SHMEM0 : at 0x000A0000, len = 0x00010000;	// shared 256kB
 	SHMEM1 : at 0x000B0000, len = 0x00010000;	// shared 256kB
 	EMI    : at 0x20000000, len = 0x08000000;	// DDR2   512MB
@@ -15,10 +24,14 @@ SEGMENTS
 {
 	code           : in C0_IMU0;
 	data           : in C0_IMU0;
-	seg_imu0       : in C0_IMU2;
-	seg_imu1       : in C0_IMU3;
-	seg_imu2       : in C0_IMU2;
-	seg_imu3       : in C0_IMU1;
+    seg_imu0       : in C0_IMU2;
+    seg_imu1       : in C0_IMU3;
+    seg_imu2       : in C0_IMU2;
+    seg_imu3       : in C0_IMU1;
+    seg_imu_x0       : in C0_IMX0;
+    seg_imu_x1       : in C0_IMX1;
+    seg_imu_x2       : in C0_IMX2;
+    seg_imu_x3       : in C0_IMX3;
 	shared0  :in EMI;
 	shared1  :in SHMEM1;
 }
@@ -41,15 +54,25 @@ SECTIONS
 	.bss           : in data;
 	.stack         : in data;
 	
-	.data_imu0     : in seg_imu0;
-	.data_imu1     : in seg_imu1;
-	.data_imu2     : in seg_imu2;
-	.data_imu3     : in seg_imu3;
-	
+    .data_imu0     : in seg_imu0;
+    .data_imu1     : in seg_imu1;
+    .data_imu2     : in seg_imu2;
+    .data_imu3     : in seg_imu3;
+    
+    .data_imu_x0     : in seg_imu_x0;
+    .data_imu_x1     : in seg_imu_x1;
+    .data_imu_x2     : in seg_imu_x2;
+    .data_imu_x3     : in seg_imu_x3;
+    
 	.data_imu0.bss : in seg_imu0;
 	.data_imu1.bss : in seg_imu1;
 	.data_imu2.bss : in seg_imu2;
 	.data_imu3.bss : in seg_imu3;
+
+    .data_imu_x2.bss : in seg_imu_x2;
+
+    .data_imu_xxx     : in shared0;
+    .data_imu_xxx.bss : in shared0;
 
 	.rpc_services.bss: in shared0;
 	.rpc_services    : in shared0;
