nm-1048 work, m tag fix

--- a/fixed_point_dnn/mc12101brd-nmpu1.cfg
+++ b/fixed_point_dnn/mc12101brd-nmpu1.cfg
@@ -1,7 +1,7 @@
 MEMORY
 {
 //  Cx_IMU:  at 0x00008000, len = 0x00038000;	// NMC0 (128*7)kB
-    C0_IMU0: at 0x00000200, len = 0x00007e00;   // NMC1 128kB reserved for boot-loader
+    C0_IMU0: at 0x00000200, len = 0x00007e00;   // NMC1 128kB
     C0_IMU1: at 0x00008000, len = 0x00008000;   // NMC1 128kB
     C0_IMU2: at 0x00010000, len = 0x00008000;   // NMC1 128kB
     C0_IMU3: at 0x00018000, len = 0x00008000;   // NMC1 128kB
@@ -15,7 +15,7 @@ MEMORY
     C0_IMX6: at 0x00070000, len = 0x00008000;   // NMC0 128kB
     C0_IMX7: at 0x00078000, len = 0x00008000;   // NMC0 128kB
     
-	SHMEM0 : at 0x000A0000, len = 0x00010000;	// shared 256kB
+	SHMEM0 : at 0x000A8000, len = 0x00008000;	// shared 256kB 0x8000 reserved for boot-loader
 	SHMEM1 : at 0x000B0000, len = 0x00010000;	// shared 256kB
 	EMI    : at 0x20000000, len = 0x08000000;	// DDR2   512MB
 }
@@ -73,6 +73,9 @@ SECTIONS
 
     .data_imu_xxx     : in shared0;
     .data_imu_xxx.bss : in shared0;
+
+    .data_imu_xxx1    : in shared1;
+    .data_imu_xxx1.bss : in shared1;
 
 	.rpc_services.bss: in shared0;
 	.rpc_services    : in shared0;
